<resources>
    <string name="app_name">TyreHubV2</string>
    <string name="TxTLogin">登录</string>
    <string name="TxTSelectTS">请选择您的身份</string>
    <string name="TxTMerchant">商户</string>
    <string name="TxTManager">店长</string>
    <string name="TxTStaff">店员</string>
    <string name="TxTLoginStatus">登录%1$d号</string>
    <string name="TxTPhoneTs">请输入手机号</string>
    <string name="TxTPasswordTs">请输入密码</string>
    <string name="TxTRegister">注册</string>
    <string name="TxTForgetNum">忘记密码</string>
    <string name="TxTTyrehub">Tyrehub</string>
    <string name="TxTWelcome">欢迎使用Tyrehub</string>
    <string name="TxTDataAll">数据总览</string>
    <string name="TxTChance">机会</string>
    <string name="TxTDevice">设备</string>
    <string name="TxTRecord">检测记录</string>
    <string name="TxTSetting">设置</string>
    <string name="TxTEmployManager">店员管理</string>
    <string name="TxTSure">确定</string>
    <string name="TxTCancel">取消</string>
    <string name="TxTUpdate">修改</string>
    <string name="TxTCloseAppTs">确定要退出App吗？</string>
    <string name="TxTSaleChance">销售机会</string>
    <string name="TxTTrackingChance">跟踪中</string>
    <string name="TxTFinishedChance">处理完毕</string>
    <string name="TxTPlateNum">车牌号码</string>
    <string name="TxTReport">查看报告</string>
    <string name="TxTDeal">处理</string>
    <string name="TxTNoData">暂无数据</string>
    <string name="TxTUserId">账号ID</string>
    <string name="TxTUserRole">用户身份</string>
    <string name="TxTUserName">姓名</string>
    <string name="TxTUserContact">联系方式</string>
    <string name="TxTUpdatePassword">修改密码</string>
    <string name="TxTBasicMessage">基本信息</string>
    <string name="TxTUserSafe">账号安全</string>
    <string name="TxTStoreName">门店名称</string>
    <string name="TxTStoreMessage">门店信息</string>
    <string name="TxTStorePhone">门店电话</string>
    <string name="TxTStoreAddress">门店地址</string>
    <string name="TxTAppMessage">App信息</string>
    <string name="TxTCurrentVersion">当前版本</string>
    <string name="TxTVersionUpdate">软件更新</string>
    <string name="TxTLanguage">语言设置</string>
    <string name="TxTLoginOut">退出登录</string>
    <string name="TxTNoUpdate">暂无更新</string>
    <string name="TxTWear">磨损</string>
    <string name="TxTWears">偏磨</string>
    <string name="TxTChanceStatus">机会状态</string>
    <string name="TxTChanceDeal">机会处理</string>

    <string name="TxTDutyArea">责任区域</string>
    <string name="TxTDealMan">处理人员</string>
    <string name="TxTDealResult">处理结果</string>
    <string name="TxTTransformContent">转化内容</string>
    <string name="TxTTransformIntent">转化意向</string>
    <string name="TxTTransformTime">转化时间</string>
    <string name="TxTTransformPrice">转化金额</string>
    <string name="TxTPleaseSelectTime">请选择时间</string>
    <string name="TxTIntention">有意向</string>
    <string name="TxTTransformed">已转化</string>
    <string name="TxTDisagree">车主不同意</string>
    <string name="TxTTire1">轮胎1个</string>
    <string name="TxTTire2">轮胎2个</string>
    <string name="TxTTire3">轮胎3个</string>
    <string name="TxTTire4">轮胎4个</string>
    <string name="TxTAlignment">四轮定位</string>
    <string name="TxTBalance">动平衡</string>
    <string name="TxTOther">其他</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 数据总览 -->
    <string name="TxTSelectTime">选择时间查询</string>
    <string name="TxTVehicleCheckingRate">查车率</string>
    <string name="TxTFindChance">发现机会</string>
    <string name="TxTChanceTrack">机会跟踪</string>
    <string name="TxTTransferRate">转化率</string>
    <string name="TxTToday">今天</string>
    <string name="TxTYesterday">昨天</string>
    <string name="TxTWeek">本周</string>
    <string name="TxTMonth">本月</string>
    <string name="TxTLastMonth">上月</string>
    <string name="TxTYear">今年</string>
    <string name="TxTDataOver">总体数据</string>
    <string name="TxTDetailData">详细数据</string>
    <string name="TxTTransferData">转化数据</string>
    <string name="TxTDataFunner">数据漏斗</string>
    <string name="TxTShopTrips">进店车次</string>
    <string name="TxTCarCheckNum">查车数</string>
    <string name="TxTChanceNum">机会数</string>
    <string name="TxTTrackNum">跟踪数</string>
    <string name="TxTTransferNum">转化数</string>
    <string name="TxTUnTrack">未跟踪</string>
    <string name="TxTUnit">辆</string>
    <string name="TxTTime">时间</string>
    <string name="TxTPlateNo">车牌</string>

    <string name="TxTTireWear">轮胎磨损</string>
    <string name="TxTNormal">良好状态</string>
    <string name="TxTBorder">边界状态</string>
    <string name="TxTImmediately">立即更换</string>
</resources>
