<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingHorizontal="10dp"
      >


      <androidx.constraintlayout.widget.Guideline
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          app:layout_constraintGuide_percent="0.5"
          android:id="@+id/line1"
          ></androidx.constraintlayout.widget.Guideline>


      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintBottom_toBottomOf="@id/line1"
          android:text="@string/TxTPlateNum"
          android:id="@+id/TVnum"
          android:textSize="@dimen/ChanceRecyclerTv"
          ></TextView>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toRightOf="@id/TVnum"
          app:layout_constraintBottom_toBottomOf="@id/line1"
          android:id="@+id/TVnumbers"
          android:layout_marginLeft="3dp"
          android:textSize="@dimen/ChanceRecyclerTv"
          ></TextView>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/line1"
         app:layout_constraintRight_toRightOf="parent"
         android:textSize="@dimen/ChanceRecyclerTv"
         android:id="@+id/TVtimes"
         >

     </TextView>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="@id/line1"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:text="@string/TxTWear"
          android:id="@+id/TV1"
          android:textSize="@dimen/ChanceRecyclerTv"
          ></TextView>

      <com.example.tyrehubv2.View.CircleLine
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/LineWear"
          app:layout_constraintTop_toTopOf="@id/line1"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toRightOf="@id/TV1"
          ></com.example.tyrehubv2.View.CircleLine>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/line1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/LineWear"
         android:text="@string/TxTWears"
         android:layout_marginLeft="5dp"
         android:id="@+id/TV2"
         android:textSize="@dimen/ChanceRecyclerTv"
         ></TextView>

      <com.example.tyrehubv2.View.CircleLine
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/LineWears"
          app:layout_constraintTop_toTopOf="@id/line1"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toRightOf="@id/TV2"
          ></com.example.tyrehubv2.View.CircleLine>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/line1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/TxTDeal"
        android:background="@color/colorYellow"
        android:textColor="@color/colorWhite"
        android:paddingHorizontal="12dp"
        android:paddingVertical="3dp"
        android:id="@+id/TVDeal"
        android:textSize="@dimen/ChanceRecyclerTv"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        ></TextView>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="@id/line1"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintRight_toLeftOf="@id/TVDeal"
          android:text="@string/TxTReport"
          android:background="@color/colorYellow"
          android:textColor="@color/colorWhite"
          android:paddingHorizontal="12dp"
          android:paddingVertical="3dp"
          android:id="@+id/TVReport"
          android:textSize="@dimen/ChanceRecyclerTv"
          android:layout_marginRight="5dp"
          android:focusable="true"
          android:clickable="true"
          android:foreground="?android:attr/selectableItemBackground"
          ></TextView>

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>